feat: fig 1 is done

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "giphy-app",
-  "displayName": "giphy-app",
+  "displayName": "Giphy App",
   "expo": {
     "name": "giphy-app",
     "slug": "giphy-app",
